# tps

./: .pre-commit-config.yaml  .pylintrc  README.md  example.py  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
example/: example.py  image_warping.py
src/tps/: __init__.py  polynomial_transform.py  thin_plate_spline.py
tests/: test_kernel.py  test_polynomial_features.py  test_tps.py
tps/: polynomial_transform.py  thin_plate_spline.py
