[metadata]
name = thin-plate-spline
version = attr: tps.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Thin Plate Spline implementation with numpy/scipy
keywords = interpolation, numpy, machine learning
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelreme/tps
project_urls =

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
include_package_data = False

[options.package_data]
* = py.typed

[options.packages.find]
exclude=
    tests*
